force-app/main/default/objects/QuoteLineItem/fields/Discount_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Discount_Percentage__c</fullName>
    <description>This field will capture the discount percentage being offered for the selected product.</description>
    <label>Discount Percentage</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>