force-app/main/default/objects/QuoteLineItem/fields/Net_Price__c.field-meta.xml
<CustomField>
    <fullName>Net_Price__c</fullName>
    <description>This field will capture the net amount after the discounts have been applied.</description>
    <label>Net Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>